kubernetes/network/books-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
  labels:
    service: books-service
spec:
  type: ClusterIP
  ports:
    - port: 9090
      name: http
      targetPort: http
      protocol: TCP
#    - port: 443
#      protocol: TCP
#      name: https
#      targetPort: 9093
  selector:
    app: books
