kubernetes/network/books-service-externalip.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service-externalip
  labels:
    service: books-service-externalip
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: http
  externalIPs:
    - 192.168.49.2
  selector:
    app: books
