kubernetes/network/books-service-nodeport.yaml
# Open on all nodes of cluster particular port for listening
# default port range 30000-32767
# config during cluster setup
apiVersion: v1
kind: Service
metadata:
  name: books-service-nodeport
  labels:
    service: books-nodeport
spec:
  selector:
    app: books
  type: NodePort
  ports:
    - port: 9090
      targetPort: http
      nodePort: 30007
