kubernetes/network/external-ip.yaml
# Better not to use ExternalIP service type
# Helps us to use service externally on some Network Interface
# Could possibly cause Security issues
apiVersion: v1
kind: Service
metadata:
  name: books-service-externalip
  labels:
    service: books-service-externalip
spec:
  selector:
    app: books
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  externalIPs:
    - 192.168.49.2 # IP address of cluster node
