kubernetes/network/external-static-ip-access.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: google-com
  labels:
    post: google-com
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: google-com
subsets:
  - addresses:
      - ip: 216.58.210.174
    ports:
      - port: 80
