kubernetes/network/books-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /books-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 9090
          - path: /nginx-service
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
